<resources>
    <string name="app_name">Payments</string>
    <string name="total_rs_0">Total: Rs. 0</string>
    <string name="add_payment"><u>Add Payment</u></string>
    <string name="add_payment_title">Add Payment</string>
    <string name="save_payments">Save Payments</string>
    <string name="payments">Payments</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="save">Save</string>
    <string name="amount">₹ Amount</string>
    <string name="provider_icici_citibank_etc">Provider (ICICI, Citibank, etc.)</string>
    <string name="transaction_reference">Transaction reference</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="all_payment_types_have_already_been_added">All payment types have already been added.</string>
    <string name="payments_successfully_saved">Payments successfully saved!</string>
    <string name="please_enter_an_amount">Please enter an amount</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="please_enter_a_provider">Please enter a provider</string>
    <string name="please_enter_a_transaction_reference">Please enter a transaction reference</string>
    <string name="total_amount">Total: ₹ %.2f</string>
    <string name="payment_details">%s: Rs. %.2f</string>
    <string name="payment_cash">Cash</string>
    <string name="payment_bank_transfer">Bank Transfer</string>
    <string name="payment_credit_card">Credit Card</string>

</resources>